webinars/gloo-1.4/2-gateway-extauth/vs-2.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: spelunker
  namespace: gloo-system
spec:
  virtualHost:
    domains:
      - '*'
    options:
      extauth:
        customAuth: {}
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: spelunker-spelunker-80
              namespace: gloo-system
